[package]
name = "asm-processor"
version = "0.1.0"
edition = "2021"
description = "Pre-process .c files and post-process .o files to enable embedding MIPS assembly into IDO-compiled C."
license = "Unlicense"
repository = "https://github.com/ethteck/asm-processor"
readme = "README.md"
keywords = ["decompilation", "ido", "mips", "asm"]

[dependencies]
anyhow = "1.0"
binrw = "0.14.1"
clap = { version = "4.5.21", features = ["derive"] }
encoding_rs = "0.8.35"
regex = "1.11.1"
shlex = "1.3.0"
temp-dir = "0.1.14"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
